--- a/static/privacy_policy.html
+++ b/static/privacy_policy.html
@@ -1,1 +1,33 @@
-プライバシーポリシー
+<html>
+<head>
+    <meta charset="UTF-8">
+</head>
+
+<body>
+
+<h1>プライバシーポリシー</h1>
+Widgetter(以下当アプリ)では、サービス向上のため、アプリの利用状況を収集するツールとしてFirebase(Google Inc.)を使用しています。
+Firebaseはご利用者の情報や行動履歴を匿名で自動取得する場合がございます。
+取得する情報、利用目的、第三者への提供等につきましては、以下のGoogleプライバシーポリシーのリンクよりご確認ください。
+
+Google プライバシーポリシー
+https://policies.google.com/privacy?hl=ja
+
+<h3>個人情報の第三者への開示・提供の禁止</h3>
+当アプリは、お客さまよりお預かりした個人情報を適切に管理し、次のいずれかに該当する場合を除き、個人情報を第三者に開示いたしません。
+<ul>
+    <li>お客さまの同意がある場合</li>
+    <li>法令に基づき開示することが必要である場合</li>
+</ul>
+
+<h3>個人情報の安全対策</h3>
+当アプリは、個人情報の正確性及び安全性確保のために、セキュリティに万全の対策を講じています。
+
+<h3>法令、規範の遵守と見直し</h3>
+当アプリは、保有する個人情報に関して適用される日本の法令、その他規範を遵守するとともに、本ポリシーの内容を適宜見直し、その改善に努めます。
+
+<h3>お問い合せ</h3>
+当アプリの個人情報の取扱に関するお問い合せは下記までご連絡ください。
+<br>
+widgetterservice[at]gmail.com
+</body>
