--- a/static/privacy_policy.html
+++ b/static/privacy_policy.html
@@ -6,12 +6,12 @@
 <body>
 
 <h1>プライバシーポリシー</h1>
-Widgetter(以下当アプリ)では、サービス向上のため、アプリの利用状況を収集するツールとしてFirebase(Google Inc.)を使用しています。
-Firebaseはご利用者の情報や行動履歴を匿名で自動取得する場合がございます。
-取得する情報、利用目的、第三者への提供等につきましては、以下のGoogleプライバシーポリシーのリンクよりご確認ください。
+Widgetter(以下当アプリ)では、サービス向上のため、アプリの利用状況を収集するツールとしてFirebase(Google Inc.)を使用しています。<br>
+Firebaseはご利用者の情報や行動履歴を匿名で自動取得する場合がございます。<br>
+取得する情報、利用目的、第三者への提供等につきましては、以下のGoogleプライバシーポリシーのリンクよりご確認ください。<br>
 
-Google プライバシーポリシー
-https://policies.google.com/privacy?hl=ja
+<a href= "https://policies.google.com/privacy?hl=ja">Google プライバシーポリシー</a>
+
 
 <h3>個人情報の第三者への開示・提供の禁止</h3>
 当アプリは、お客さまよりお預かりした個人情報を適切に管理し、次のいずれかに該当する場合を除き、個人情報を第三者に開示いたしません。
